Update MV design and add images

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
 
     <main class="main">
         <div class="mv">
-            <div class="mv__bg"></div>
-            <div class="mv__content container">
-                <h2 class="mv__title">Global<br>Communication<br>Group</h2>
-                <p class="mv__lead">Connecting the World.</p>
+            <div class="mv__bg">
+                <img src="./images/mv-bg.png" alt="" role="presentation">
+            </div>
+            <div class="mv__content">
+                <div class="mv__logo">
+                    <img src="./images/logo.png" alt="GCG">
+                </div>
             </div>
         </div>
 
