--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="vision__inner">
                 <div class="vision__row vision__row--2">
                     <div class="vision__text vision__text--green">
-                        <h3 class="vision__sub-title">「正解」を教える教育から<br class="u-sp-none">「問い」を生み出す教育へ。</h3>
+                        <h3 class="vision__sub-title">「正解」を教える教育から「問い」を生み出す教育へ。</h3>
                         <div class="vision__desc">
                             <p>AIが瞬時に答えを出す時代。<br>お子様が大人になる20年後、知識の量そのものに価値は<br class="u-sp-none">なくなっているかもしれません。</p>
                             <p>今、私たちが子どもたちに手渡せる最高のギフト。<br>それは、自らを感じ、考え、新しい価値を創造する「人間だけの力」です。<br>既存の枠組みに当てはめるのではなく、内側にある100の可能性を解き放つこと。<br>10年後、20年後の世界を、凛として歩むための知性と感性を、今ここで。
@@ -159,8 +159,287 @@
                     </div>
                     <div class="vision__img vision__img--right">
                         <img src="./images/vision-img02.png" alt="Children engaging in creative learning">
-                        <p class="vision__caption">提供元：株式会社ハタプロ<br>(https://hatapro.co.jp/)</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Difference Section -->
+        <section id="difference" class="section difference">
+            <div class="difference__inner">
+                <h2 class="c-title">
+                    <img src="./images/logo.png" alt="GCG" class="c-title__logo"> と他教室との違い
+                </h2>
+                <div class="difference__content">
+                    <div class="difference__col difference__col--general">
+                        <h3 class="difference__col-title">一般的な幼児教室は……</h3>
+                        <ul class="difference__list">
+                            <li>・正解を求める</li>
+                            <li>・年齢別カリキュラム</li>
+                            <li>・スキル重視</li>
+                            <li>・評価軸が外在</li>
+                        </ul>
+                    </div>
+
+                    <div class="difference__arrow">
+                        <img src="./images/difference-arrow.png" alt="To GCG">
+                    </div>
+
+                    <div class="difference__col difference__col--gcg">
+                        <div class="difference__gcg-box">
+                            <h3 class="difference__col-title">
+                                <img src="./images/logo.png" alt="GCG" class="difference__col-logo"> は……
+                            </h3>
+                            <ul class="difference__list">
+                                <li>・問いを立てる</li>
+                                <li>・学齢別×子ども起点の循環型</li>
+                                <li>・知育×創造×自然×テクノロジー統合</li>
+                                <li>・内発的動機</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="difference__deco">
+                    <img src="./images/difference.png" alt="Difference">
+                </div>
+            </div>
+        </section>
+
+        <!-- Feature Section -->
+        <section id="feature" class="section feature">
+            <div class="feature__inner">
+                <h2 class="c-title feature__title">
+                    <img src="./images/logo.png" alt="GCG" class="c-title__logo"> の特長
+                </h2>
+                <div class="feature__list">
+                    <div class="feature__item feature__item--01">
+                        <div class="feature__item-content">
+                            <h3 class="feature__item-title">
+                                知育と創造を、<br>分けない学び
+                                <img src="./images/feature-search.png" alt="" class="feature__search-icon">
+                            </h3>
+                            <p class="feature__desc">
+                                GCGのレッスンは、知育から<br>創造へと流れる構成です。<br>考えたことを、感じ、表してみる。<br>その循環が、学びを深めていきます。
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="feature__illust feature__illust--01">
+                        <img src="./images/feature-illust01.png" alt="" role="presentation">
+                    </div>
+
+                    <div class="feature__item feature__item--02">
+                        <div class="feature__item-content">
+                            <h3 class="feature__item-title">
+                                学研の知見を<br>土台に
+                                <img src="./images/feature-search.png" alt="" class="feature__search-icon">
+                            </h3>
+                            <p class="feature__desc">
+                                長年の研究に基づく知育を、年齢に<br>合わせて取り入れています。<br>先取りではなく、理解の芽を<br>育てることを大切にします。
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="feature__item feature__item--03">
+                        <div class="feature__illust feature__illust--02">
+                            <img src="./images/feature-illust02.png" alt="" role="presentation">
+                        </div>
+                        <div class="feature__item-content">
+                            <h3 class="feature__item-title">
+                                少人数制・<br>落ち着いた環境
+                                <img src="./images/feature-search.png" alt="" class="feature__search-icon">
+                            </h3>
+                            <p class="feature__desc">
+                                一人ひとりの様子に目を向けながら、<br>無理のないテンポで進めます。<br>静かな環境だからこそ、<br>集中と対話が生まれます。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Domain Section -->
+        <section id="domain" class="section domain">
+            <div class="domain__inner">
+                <div class="domain__header">
+                    <h2 class="c-title domain__title">
+                        <img src="./images/logo.png" alt="GCG" class="c-title__logo"> 4領域の統合設計
+                    </h2>
+                    <div class="domain__illust">
+                        <img src="./images/domain-illust.png" alt="" role="presentation">
+                    </div>
+                </div>
+
+                <div class="domain__intro">
+                    <p class="domain__desc">
+                        GCGは4領域の統合設計。<br>
+                        単独ではなく掛け合わせることで「立体的成長」を実現します。
+                    </p>
+                </div>
+
+                <div class="domain__deco-text">
+                    <img src="./images/domain-text.png" alt="Holistic Growth" role="presentation">
+                </div>
+
+                <div class="domain__list">
+                    <div class="domain__item">
+                        <div class="domain__img">
+                            <picture>
+                                <source media="(max-width: 767px)" srcset="./images/domain01--sp.png">
+                                <img src="./images/domain01.png" alt="知育 / THINKING">
+                            </picture>
+                        </div>
+                        <div class="domain__item-text">
+                            <span class="domain__item-ja">知育</span>
+                            <span class="domain__item-en">THINKING</span>
+                        </div>
+                    </div>
+
+                    <div class="domain__item">
+                        <div class="domain__img">
+                            <picture>
+                                <source media="(max-width: 767px)" srcset="./images/domain02--sp.png">
+                                <img src="./images/domain02.png" alt="アート / CREATING">
+                            </picture>
+                        </div>
+                        <div class="domain__item-text">
+                            <span class="domain__item-ja">アート</span>
+                            <span class="domain__item-en">CREATING</span>
+                        </div>
+                    </div>
+
+                    <div class="domain__item">
+                        <div class="domain__img">
+                            <picture>
+                                <source media="(max-width: 767px)" srcset="./images/domain03--sp.png">
+                                <img src="./images/domain03.png" alt="自然 / NATURE">
+                            </picture>
+                        </div>
+                        <div class="domain__item-text">
+                            <span class="domain__item-ja">自然</span>
+                            <span class="domain__item-en">NATURE</span>
+                        </div>
+                    </div>
+
+                    <div class="domain__item">
+                        <div class="domain__img">
+                            <picture>
+                                <source media="(max-width: 767px)" srcset="./images/domain04--sp.png">
+                                <img src="./images/domain04.png" alt="テクノロジー / FUTURE">
+                            </picture>
+                        </div>
+                        <div class="domain__item-text">
+                            <span class="domain__item-ja">テクノロジー</span>
+                            <span class="domain__item-en">FUTURE</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Target Section -->
+        <section id="target" class="section target">
+            <div class="target__inner">
+                <h2 class="c-title target__title">
+                    <img src="./images/logo-white.png" alt="GCG" class="c-title__logo"> で育む5つの力
+                </h2>
+                <p class="target__intro">GCGは「受験対策だけの教室」ではありません。</p>
+
+                <div class="target__list">
+                    <!-- Item 1 -->
+                    <div class="target__item target__item--01">
+                        <div class="target__content">
+                            <div class="target__bg-img">
+                                <picture>
+                                    <source media="(max-width: 767px)" srcset="./images/target01--sp.png">
+                                    <img src="./images/target01.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="target__text-box">
+                                <span class="target__num">1</span>
+                                <h3 class="target__item-title">ひらめきを恐れず<br>量産できる</h3>
+                                <p class="target__item-desc">正解のない問いに対して、<br>自分なりのアイデアを<br>自由に発想する。</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 2 -->
+                    <div class="target__item target__item--02">
+                        <div class="target__deco-wrap">
+                            <img src="./images/target-illust02.png" alt="Target Profile" class="target__deco-profile"
+                                role="presentation">
+                        </div>
+                        <div class="target__content">
+                            <div class="target__bg-img">
+                                <picture>
+                                    <source media="(max-width: 767px)" srcset="./images/target02--sp.png">
+                                    <img src="./images/target02.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="target__text-box">
+                                <span class="target__num">2</span>
+                                <h3 class="target__item-title">違和感に気づき、<br>問いを立てられる</h3>
+                                <p class="target__item-desc">当たり前を疑う<br>感性を持ち、自ら探究の<br>スタート地点をつくる。</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 3 -->
+                    <div class="target__item target__item--03">
+                        <div class="target__content">
+                            <div class="target__bg-img">
+                                <picture>
+                                    <source media="(max-width: 767px)" srcset="./images/target03--sp.png">
+                                    <img src="./images/target03.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="target__text-box">
+                                <span class="target__num">3</span>
+                                <h3 class="target__item-title">仲間と協働し、<br>より良いものを<br>生み出せる</h3>
+                                <p class="target__item-desc">他者の意見を取り入れ、<br>独りでは到達できない<br>創造を実現する。</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 4 -->
+                    <div class="target__item target__item--04">
+                        <div class="target__content">
+                            <div class="target__bg-img">
+                                <picture>
+                                    <source media="(max-width: 767px)" srcset="./images/target04--sp.png">
+                                    <img src="./images/target04.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="target__text-box">
+                                <span class="target__num">4</span>
+                                <h3 class="target__item-title">論理と言葉で<br>考えを伝えられる</h3>
+                                <p class="target__item-desc">感性で捉えたものを言語化し、<br>相手に届くロジックで表現する。</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 5 -->
+                    <div class="target__item target__item--05">
+                        <div class="target__content">
+                            <div class="target__bg-img">
+                                <picture>
+                                    <source media="(max-width: 767px)" srcset="./images/target05--sp.png">
+                                    <img src="./images/target05.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="target__text-box">
+                                <span class="target__num">5</span>
+                                <h3 class="target__item-title">内発的動機が高く、<br>学び続ける姿勢</h3>
+                                <p class="target__item-desc">外部からの評価だけでなく、<br>自らの知的好奇心を<br>原動力にする。</p>
+                                <img src="./images/target-illust01.png" alt=""
+                                    class="target__item-deco target__item-deco--02" role="presentation">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="target__bottom-text">
+                    <p>「合格できる子」ではなく、<br>「未来を切り開く合格者」を育てます。</p>
                 </div>
             </div>
         </section>
