--- a/index.html
+++ b/index.html
@@ -785,9 +785,9 @@
                     <!-- Item 02 -->
                     <div class="voice__item voice__item--02 js-fade u-delay-200">
                         <p class="voice__text">
-                            AIロボットZukkuとのやり取りには<br>
-                            子どもが大興奮でした。<br>
-                            新鮮な体験で、ずっと笑顔でした。
+                            AIロボットZukkuとの<br class="u-sp-only">やり取りには<br class="u-pc-only">
+                            子どもが<br class="u-sp-only">大興奮でした。<br>
+                            新鮮な体験で、<br class="u-sp-only">ずっと笑顔でした。
                         </p>
                     </div>
                 </div>
@@ -802,9 +802,9 @@
             <div class="voice__last">
                 <div class="container">
                     <p class="voice__last-text js-fade">
-                        お子様の可能性を、型にはめるには早すぎます。<br>
-                        自由に描き、何度でも描きなおせる「創造性の原点」を。<br>
-                        まずは、親子でその空気感に触れてみてください。
+                        お子様の可能性を、<br class="u-sp-only">型にはめるには早すぎます。<br>
+                        自由に描き、何度でも<br class="u-sp-only">描きなおせる<br class="u-sp-only">「創造性の原点」を。<br>
+                        まずは、親子で<br class="u-sp-only">その空気感に<br class="u-sp-only">触れてみてください。
                     </p>
                 </div>
             </div>
