--- a/index.html
+++ b/index.html
@@ -579,7 +579,8 @@
                         <p class="flow__desc">
                             数や形、順序にふれながら、<br class="u-sp-only">話を聞き、考えてみます。<br>
                             答えを急がず、「わかる」手前の<br>
-                            気づきを大切にします。
+                            気づきを大切にします。<br>
+                            ※小学生は読解作文タイムとなります。
                         </p>
 
                     </div>
@@ -677,9 +678,13 @@
                 </div>
 
                 <div class="course__note">
-                    ※月謝：11,000円(税込み)～　※各コース定員は目安であり、お申し込み状況や編成の都合により変更となる場合がございます。<br>
+                    ※月謝：11,000円(税込み)〜　※各コース定員は目安であり、お申し込み状況や編成の都合により変更となる場合がございます。<br>
                     ※その他半年に一度施設教材費を頂戴します。<br>
-                    ※通室振替制度あり（教室規定に則っての取得となります。）
+                    ※通室振替制度あり（教室規定に則っての取得となります。）<br>
+                    ※きょうだい割引制度あり<br>
+                    ※小学校受験サポートについて<br>
+                    　志望校に合わせての「願書の書き方」、「面接演習」等サポートいたします。<br>
+                    　詳しくはお尋ねください。
                 </div>
             </div>
         </section>
